...
            android:layout_marginBottom="50dp"
            android:text="@string/expert_contact_info"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_expert_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            android:id="@+id/expertImage2"
            android:layout_width="162dp"
            android:layout_height="179dp"
            android:layout_marginStart="8dp"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/expert_icon"
            android:src="@drawable/expert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</layout>
...
