...
                app:layout_constraintTop_toTopOf="parent"
                tools:text="25" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/current_tracks_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/coinBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
...
